[tool.poetry]
name = "aaindex_lookup"
version = "0.1.0"
description = ""
authors = ["Michael Milton <michael.r.milton@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.27.1"
pyparsing = "^3.0.8"
pydantic = "^1.9.0"
click = "^7.0.0"
rich = "^12.4.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
aaindex = 'aaindex_lookup.cli:main'
